--- a/CTFd/plugins/ctfd_whale/assets/view.html
+++ b/CTFd/plugins/ctfd_whale/assets/view.html
@@ -1,21 +1,21 @@
 {% extends "challenge.html" %}
 
 {% block description %}
-    {{ challenge.html }}
+<!-- {{ challenge.html }} -->
     <div class="row text-center pb-3">
         <div id="whale-panel" style="width: 100%;">
-            <button type="button" class="btn btn-primary" onclick="window.challenge.boot()">Boot a instance</button>
+            <button type="button" id="whale-button-boot" class="btn btn-primary" onclick="CTFd._internal.challenge.boot()">Start a instance</button>
         </div>
     </div>
 {% endblock %}
 
 {% block input %}
     <input id="challenge-id" class="challenge-id" type="hidden" value="{{ challenge.id }}">
-    <input id="challenge-input" class="challenge-input" type="text" name="answer" placeholder="Flag"/>
+    <input id="challenge-input" class="challenge-input form-control" type="text" name="submission" @keyup.enter="submitChallenge()" placeholder="Flag" x-model="submission"/>
 {% endblock %}
 
 {% block submit %}
-    <button id="challenge-submit" class="challenge-submit" type="submit">
+    <button id="challenge-submit" class="challenge-submit btn btn-outline-secondary w-100 h-100" type="submit" @click.debounce.500ms="submitChallenge()" >
         Submit
     </button>
 {% endblock %}
